# ML-MSA

./: CMakeLists.txt  COPILOT_INSTRUCTIONS.md  INTERPRETING_RESULTS.md  PRESENTATION_INFO.md  aligner.cp313-win_amd64.pyd  code_structure_report.md  msa_band_prediction_plan.md  requirements.txt  run_data_gen.py  save_system_info.py  setup.py  test_report.md  test_training.py  vastai_deployment_guide.md  vastai_download.sh  vastai_run.sh  vastai_setup.sh
aligner/: anchored_align.cpp  band_doubling.cpp  banded_nw.cpp  four_russians.cpp  full_nw.cpp  hirschberg.cpp  profile_dp.cpp  simd_banded_nw.cpp
baselines/: classical.py
checkpoints/: best_model.pt
checkpoints/test_run/: best_model.pt
data/: __init__.py  loaders.py  simulate.py
data/cache/train/: sample_10.npz  sample_100.npz  sample_1000.npz  sample_10000.npz  sample_10005.npz  sample_10008.npz  sample_10009.npz  sample_1001.npz  sample_10015.npz  sample_10018.npz  sample_1002.npz  sample_10022.npz  sample_10023.npz  sample_10029.npz  sample_10030.npz  sample_10032.npz  sample_10039.npz  sample_1004.npz  sample_10041.npz  sample_10043.npz  sample_10044.npz  sample_10045.npz  sample_10046.npz  sample_10047.npz  sample_10048.npz  sample_10049.npz  sample_1005.npz  sample_10051.npz  sample_10053.npz  sample_10054.npz  sample_10055.npz  sample_10057.npz  sample_10058.npz  sample_1006.npz  sample_10060.npz  sample_10061.npz  sample_10063.npz  sample_10065.npz  sample_10069.npz  (+45399 more)
data/processed/: val.parquet
data/test_run/: train.parquet  val.parquet
experiments/: ablation.py  compare.py  run_all.py
features/: anchors.py  dotplot.py  kmer.py  profile_features.py
model/: band_predictor.py  evaluate.py  train.py
msa/: guide_tree.py  iterative_refine.py  progressive_msa.py
results/: ablation_neural_vs_fixed.csv  final_comparison.csv  interpret_results.py  limitations.md  speed_pairwise.csv
results/training/: training_history.json
scoring/: band_metrics.py  metrics.py
tests/: test_correctness.py  test_four_russians.py  test_msa_quality.py  test_neural_vs_fixed.py  test_speed_pairwise.py
(+8842 files in other folders)
